cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
project(m3u_gen LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQURIED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
add_executable(m3u_gen source/main.cpp)
include_directories({CMAKE_SOURCE_DIR})
#target_link_libraries(m3u_gen  ${OpenCV_LIBS})
install(TARGETS m3u_gen DESTINATION bin)
